# cross_and_balls

./: .gitignore  CMakeLists.txt  leaderboard.txt  main.c  memstat.txt
game/: game.c  game.h
game/ai/: ai.c  ai.h
game/config/: config.c  config.h
game/controllers/: controllers.c  controllers.h  states.h
game/controllers/board/: board.c  states.c
game/controllers/leaderboard/: leaderboard.c  states.c
game/controllers/menu/: menu.c  states.c
game/domain/: game.c  game.h
game/domain/entities/: game.c  game.h  leaderboard.c  leaderboard.h
game/domain/query/: moves.c  moves.h
game/views/: assets.c  assets.h  board_view.c  board_view.h  symbols_view.h  views.c  views.h
game/views/board/: views.c  views.h
game/views/layout/: layout.c  layout.h
game/views/leaderboard/: views.c  views.h
game/views/menu/: views.c  views.h
game/views/primitives/: button.h  primitives.c  primitives.h
game/views/window/: size.c  size.h
memstat/: memstat.c  memstat.h
